--- a/Grad_01/APIs/appsettings.json
+++ b/Grad_01/APIs/appsettings.json
@@ -15,7 +15,8 @@
         "Pepper": "Letsmeknowyourthinkisroughplacehooliliving123bonnam6bay8"
     },
     "VnPay": {
-        "ReturnUrl": "https://localhost:7138/api/payment/vnpay-return",
+        "ReturnUrl": "https://localhost:7138/api/Payment/VnPayIPN",
+        //"ReturnUrl": "https://sandbox.vnpayment.vn/merchantv2/Home/VnPayIPN",
         "PaymentUrl": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
         "TmnCode": "MSHOSDSV",
         "HashSecret": "ZDYSKSVDINDODKZKTPNEIOLXLHDZUGJV",
