--- a/Grad_01/APIs/appsettings.json
+++ b/Grad_01/APIs/appsettings.json
@@ -10,8 +10,8 @@
     },
     "AllowedHosts": "*",
     "JWT": {
-        "ValidAudience": "http://localhost:5198",
-        "ValidIssuer": "https://localhost:7138",
+        "audience": "Pikachu",
+        "issuer": "Book connect",
         "Pepper": "Letsmeknowyourthinkisroughplacehooliliving123bonnam6bay8"
     },
     "VnPay": {
