--- a/Grad_01/APIs/appsettings.Development.json
+++ b/Grad_01/APIs/appsettings.Development.json
@@ -1,9 +1,21 @@
-﻿{
+{
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Authentication": {
+    "Schemes": {
+      "Bearer": {
+        "ValidAudiences": [
+          "http://localhost:60209",
+          "https://localhost:44385",
+          "http://localhost:5198",
+          "https://localhost:7138"
+        ],
+        "ValidIssuer": "dotnet-user-jwts"
+      }
+    }
   }
 }
-
