CRUD for category

--- a/Grad_01/APIs/appsettings.json
+++ b/Grad_01/APIs/appsettings.json
@@ -21,6 +21,11 @@
         "TmnCode": "JEDGSQGG",
         "HashSecret": "JTYXQMXVDZGLSZRKMFRSHBUDZQOJFRYD",
         "Version": "2.1.0"
+    },
+    "Cloudinary": {
+        "CloudName": "dbpvdxzvi",
+        "ApiKey": "522813698746457",
+        "ApiSerect": "eBRIxphH2tPtjW5cibg54-MamWg"
     }
 }
 
