--- a/Grad_01/APIs/APIs.csproj
+++ b/Grad_01/APIs/APIs.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="System.Text.Encoding.CodePages" Version="8.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.1.0" />
     <PackageReference Include="CloudinaryDotNet" Version="1.26.1" />
+    <PackageReference Include="Microsoft.AspNetCore.OData" Version="7.7.4" />
   </ItemGroup>
    <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
