--- a/Grad_01/BusinessObjects/BusinessObjects.csproj
+++ b/Grad_01/BusinessObjects/BusinessObjects.csproj
@@ -32,6 +32,7 @@
     <None Remove="Models\E-com\Rating\" />
     <None Remove="Models\Trading\" />
     <None Remove="DTO\Subscription\" />
+    <None Remove="Models\Authorization\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
@@ -42,5 +43,6 @@
     <Folder Include="Models\E-com\Rating\" />
     <Folder Include="Models\Trading\" />
     <Folder Include="DTO\Subscription\" />
+    <Folder Include="Models\Authorization\" />
   </ItemGroup>
 </Project>
