Clean: authorization services

--- a/Grad_01/APIs/appsettings.json
+++ b/Grad_01/APIs/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
     "ConnectionStrings": {
-        "Default": "Server=localhost,1433;Database=Grad_Proto_02;User=sa;Password=Noshitsherlock[1];TrustServerCertificate=True;"
+        "Default": "Server=localhost,1433;Database=Grad_Proto_02;User=sa;Password=;TrustServerCertificate=True;"
     },
     "Logging": {
         "LogLevel": {
@@ -15,8 +15,8 @@
         "Pepper": "Letsmeknowyourthinkisroughplacehooliliving123bonnam6bay8"
     },
     "VnPay": {
-        "ReturnUrl": "https://localhost:7138/api/Payment/vnpay/VnPayIPN",
         //"ReturnUrl": "https://sandbox.vnpayment.vn/merchantv2/Home/VnPayIPN",
+        "ReturnUrl": "https://localhost:7138/api/Payment/vnpay/VnPayIPN",
         "PaymentUrl": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
         "TmnCode": "JEDGSQGG",
         "HashSecret": "JTYXQMXVDZGLSZRKMFRSHBUDZQOJFRYD",
