--- a/Grad_01/BusinessObjects/appsettings.json
+++ b/Grad_01/BusinessObjects/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
     "ConnectionStrings": {
-        "Default": "Server=localhost,1433;Database=Grad_Proto_02;User=sa;Password=Noshitsherlock[1];TrustServerCertificate=True;"
+        "Default": "Server=localhost,1433;Database=Grad_Proto_02;User=sa;Password=;TrustServerCertificate=True;"
     },
     "Logging": {
         "LogLevel": {
